--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.5.3"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.1",
+    "bootstrap-vue": "^2.21.2"
   }
 }
